--- a/Assets/Scripts/Multiplayer/XRMultiplayer.asmdef
+++ b/Assets/Scripts/Multiplayer/XRMultiplayer.asmdef
@@ -20,7 +20,8 @@
         "ParrelSync",
         "Unity.Multiplayer.Playmode",
         "EnoxSoftware.OpenCVForUnity",
-        "ZED"
+        "ZED",
+        "SteamVR"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
