--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -8,7 +8,7 @@
     "com.microsoft.mixedreality.toolkit.tools": "file:MixedReality/com.microsoft.mixedreality.toolkit.tools-2.8.3.tgz",
     "com.unity.burst": "1.8.19",
     "com.unity.collab-proxy": "2.6.0",
-    "com.unity.feature.development": "1.0.2",
+    "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.multiplayer.playmode": "1.3.3",
     "com.unity.multiplayer.tools": "2.2.3",
@@ -22,7 +22,6 @@
     "com.unity.test-framework": "1.4.5",
     "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
-    "com.unity.xr.arcore": "6.0.5",
     "com.unity.xr.arfoundation": "6.0.5",
     "com.unity.xr.hands": "1.5.0",
     "com.unity.xr.interaction.toolkit": "3.0.7",
