Add board manager

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,5 +59,6 @@
     "dotnet.defaultSolution": "XR-Interactive.sln",
     "cSpell.words": [
         "Behaviour"
-    ]
+    ],
+    "cSpell.enabled": false
 }
