--- a/Assets/Scripts/Main.asmdef
+++ b/Assets/Scripts/Main.asmdef
@@ -19,7 +19,8 @@
         "GUID:91d78486a0f2a7041bda4115af7c8f76",
         "GUID:f2d49d9fa7e7eb3418e39723a7d3b92f",
         "GUID:1491147abca9d7d4bb7105af628b223e",
-        "GUID:088b28bd4e32e6f4b812ed0814121a32"
+        "GUID:088b28bd4e32e6f4b812ed0814121a32",
+        "GUID:4a0d30d5402c6cd4497d877deafd3e45"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
